# LuminaLib

./: .gitignore  LICENSE  README.md  deploy.ps1  docker-compose.yml
Lumina-backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
Lumina-backend/luminalib/: __init__.py  main.py
Lumina-backend/luminalib/core/: config.py  constants.py  dynamic_config.py  exceptions.py  logging_config.py  middleware.py  security.py
Lumina-backend/luminalib/db/: __init__.py  backup.py  base.py  session.py
Lumina-backend/luminalib/interfaces/: llm_interface.py  storage_interface.py
Lumina-backend/luminalib/models/: __init__.py  app_config.py  base_audit_model.py  book.py  borrow.py  document.py  document_chunk.py  ingestion_job.py  recommendation.py  review.py  role.py  system_config.py  user.py
Lumina-backend/luminalib/repositories/: app_config_repository.py  base_repository.py  book_repository.py  borrow_repository.py  config_repository.py  document_repository.py  review_repository.py  user_repository.py
Lumina-backend/luminalib/schemas/: auth_schema.py  book_schema.py  borrow_schema.py  config_schema.py  document_schema.py  ingestion_schema.py  preferences_schema.py  qa_schema.py  review_schema.py  user_schema.py
Lumina-backend/luminalib/services/: app_config_service.py  auth_service.py  (+11 more)
Lumina-backend/tests/: conftest.py  test_app_configs.py  test_auth.py  test_books.py  test_config.py  test_docker_llm_provider.py  test_documents.py  test_health.py  test_ingestion.py  test_qa.py  test_recommendations.py  test_reviews_and_borrows.py  test_users.py
(+95 files in other folders)
