[project]
name = "luminalib-backend"
version = "1.0.0"
description = "LuminaLib - Enterprise Library Management Backend with Clean Architecture"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "email-validator>=2.2.0",
    "pypdf>=4.2.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "anyio>=4.4.0",
]
ml = [
    "scikit-learn>=1.5.1",
    "joblib>=1.4.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
